fix ship label alignment

--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,6 @@
   background-color: transparent;
 }
 
+.ship{
+  margin: 0px;
+}
